The plugin's structure and name were changed